kubernetes/home.vijayakumar.xyz/media/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/prowlarr:1.28.2
          imagePullPolicy: IfNotPresent
          name: prowlarr
          ports:
            - containerPort: 9696
              name: prowlarr-tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: prowlarr
              subPath: prowlarr-config
        - image: ghcr.io/flaresolverr/flaresolverr:v3.3.21
          imagePullPolicy: IfNotPresent
          name: flaresolverr
          ports:
            - containerPort: 8191
              name: flaresolverr
              protocol: TCP
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr-pvc
