kubernetes/home.vijayakumar.xyz/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: media
spec:
  ports:
    - name: prowlarr-tcp
      port: 9696
      protocol: TCP
      targetPort: 9696
    - name: prowlarr-udp
      port: 9696
      protocol: UDP
      targetPort: 9696
    - name: flaresolverr-tcp
      port: 8191
      protocol: TCP
      targetPort: 8191
    - name: flaresolverr-udp
      port: 8191
      protocol: UDP
      targetPort: 8191
  selector:
    app: prowlarr
  type: ClusterIP
  clusterIP: 10.43.157.100
