kubernetes/home.vijayakumar.xyz/media/prowlarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`prowlarr.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
