kubernetes/home.vijayakumar.xyz/media/prowlarr/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/prowlarr:1.26.1
          imagePullPolicy: IfNotPresent
          name: prowlarr
          ports:
            - containerPort: 9696
              name: prowlarr-tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: prowlarr
              subPath: prowlarr-config
        - image: ghcr.io/flaresolverr/flaresolverr:v3.3.21
          imagePullPolicy: IfNotPresent
          name: flaresolverr
          ports:
            - containerPort: 8191
              name: flaresolverr
              protocol: TCP
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: pvc-prowlarr
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: media
spec:
  ports:
    - name: prowlarr-tcp
      port: 9696
      protocol: TCP
      targetPort: 9696
    - name: prowlarr-udp
      port: 9696
      protocol: UDP
      targetPort: 9696
    - name: flaresolverr-tcp
      port: 8191
      protocol: TCP
      targetPort: 8191
    - name: flaresolverr-udp
      port: 8191
      protocol: UDP
      targetPort: 8191
  selector:
    app: prowlarr
  type: ClusterIP
  clusterIP: 10.43.157.100
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
